--- a/src/main/resources/templates/AdminPanel/addProduct.html
+++ b/src/main/resources/templates/AdminPanel/addProduct.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta name="robots" content="noindex">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Whitesquare</title>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<form method="post" th:action="@{/adminPanel/addProduct}" th:object="${product}" enctype="multipart/form-data">
-    <div class="grid">
-        <label for="name">
-            Name
-            <input th:field="*{name}" id="name" placeholder="Name..." required>
-        </label>
-        <label for="price">
-            Price
-            <input th:field="*{price}" type="number" id="price" placeholder="Price..." required>
-        </label>
+<div id="wrapper">
+    <nav>
+        <ul class="top-menu">
+            <li><a href ="/adminPanel">Продукти</a></li>
+            <li class ="active">Замовлення</li>
+        </ul>
+    </nav>
+    <div id="heading">
+        <form method="post" th:action="@{/adminPanel/addProduct}" th:object="${product}" enctype="multipart/form-data">
+            <div class="grid">
+                <label for="name">
+                    <h1>Name</h1>
+                    <input th:field="*{name}" id="name" placeholder="Name..." required>
+                </label>
+                <label for="price">
+                    <h1>Price</h1>
+                    <input th:field="*{price}" type="number" id="price" placeholder="Price..." required>
+                </label>
+            </div>
+            <div>
+                <label for="productType">
+                    <h1>Category</h1>
+                    <select id="productType" th:field="*{productType}">
+                        <option th:each="productType: ${productTypes}" th:value="${productType.id}" th:text="${productType.name}"/>
+                    </select>
+                </label>
+            </div>
+            <div class="form-group">
+                <label class="file">
+                    <input type="file" name="image" accept="image/*" class="form-control-file">
+                </label>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
     </div>
-    <div>
-        <label for="productType">
-            Product type
-            <select id="productType" th:field="*{productType}">
-                <option th:each="productType: ${productTypes}" th:value="${productType.id}" th:text="${productType.name}"/>
-            </select>
-        </label>
-    </div>
-    <div class="form-group">
-        <input type="file" name="image" accept="image/*" class="form-control-file">
-    </div>
-    <button type="submit">Submit</button>
-</form>
+    <footer>
+        <h3>© 2023 Магазин «abc»</h3>
+        <h3>Телефон +380123456789</h3>
+    </footer>
+</div>
 </body>
 </html>
