--- a/src/main/resources/templates/AdminPanel/addProductType.html
+++ b/src/main/resources/templates/AdminPanel/addProductType.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta name="robots" content="noindex">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Whitesquare</title>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<form method="post" th:action="@{/adminPanel/addProductType}" th:object="${productType}">
-    <div class="grid">
-        <label for="name">
-            Name
-            <input th:field="*{name}" id="name" placeholder="Name..." required>
-        </label>
+<div id="wrapper">
+    <nav>
+        <ul class="top-menu">
+            <li><a href ="/adminPanel">Продукти</a></li>
+            <li class ="active">Замовлення</li>
+        </ul>
+    </nav>
+    <div id="heading">
+        <form method="post" th:action="@{/adminPanel/addProductType}" th:object="${productType}">
+            <div class="grid">
+                <label for="name">
+                    <h1>Name</h1>
+                    <input th:field="*{name}" id="name" placeholder="Name..." required>
+                </label>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
     </div>
-    <button type="submit">Submit</button>
-</form>
+    <footer>
+        <h3>© 2023 Магазин «abc»</h3>
+        <h3>Телефон +380123456789</h3>
+    </footer>
+</div>
 </body>
 </html>
