--- a/src/main/resources/templates/AdminPanel/showProductAction.html
+++ b/src/main/resources/templates/AdminPanel/showProductAction.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta name="robots" content="noindex">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Whitesquare</title>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Category</th>
-        <th>Delete</th>
-        <th>Update</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="product: ${products}">
-        <td th:text="${product.id}"></td>
-        <td th:text="${product.name}"></td>
-        <td th:text="${product.productType.name}"></td>
-        <td>
-            <a th:href="@{/adminPanel/delete/{id}(id=${product.id})}" th:text="Delete"></a>
-        </td>
-        <td>
-            <a th:href="@{/adminPanel/update/{id}(id=${product.id})}" th:text="Update"></a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<div id="wrapper">
+    <nav>
+        <ul class="top-menu">
+            <li class ="active">Продукти</li>
+            <li><a href ="/adminPanel/order">Замовлення</a></li>
+        </ul>
+    </nav>
+    <div id="heading">
+        <table>
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Category</th>
+                <th>Delete</th>
+                <th>Update</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="product: ${products}">
+                <td th:text="${product.id}"></td>
+                <td th:text="${product.name}"></td>
+                <td th:text="${product.productType.name}"></td>
+                <td>
+                    <a th:href="@{/adminPanel/delete/{id}(id=${product.id})}" th:text="Delete"></a>
+                </td>
+                <td>
+                    <a th:href="@{/adminPanel/update/{id}(id=${product.id})}" th:text="Update"></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <div id="addProduct"><a class="buy" th:href="@{/adminPanel/addProduct}" >Додати продукт</a></div>
+        <div id="addCategory"><a class="buy" th:href="@{/adminPanel/addProductType}" >Додати категорію</a></div>
+    </div>
+    <footer>
+        <h3>© 2023 Магазин «abc»</h3>
+        <h3>Телефон +380123456789</h3>
+    </footer>
+</div>
 </body>
 </html>
