--- a/src/main/resources/templates/Shop/catalogFeed.html
+++ b/src/main/resources/templates/Shop/catalogFeed.html
@@ -16,7 +16,7 @@
             <li><a href ="/about">Про нас</a></li>
             <li><a href ="/catalog/meat">Каталог м'яса</a></li>
             <li class ="active">Каталог кормів</li>
-            <li><a href ="/cart">Кошик     </a></li>
+            <li><a href ="/cart">Кошик</a></li>
         </ul>
     </nav>
     <div id="heading">
@@ -25,9 +25,9 @@
         <div id="Product">
             <div class="productWindow" th:each="product: ${products}">
                 <span th:text="${product.name}"></span>
-                <img th:src="@{${'/uploads/'+product.getName()+'.png'}}">
-                <span th:text="'Ціна :'  +${product.price} +'грн'"></span>
-                <a class="add" th:href="@{/cart/add/{id}(id=${product.id})}" th:text="Add"></a>
+                <img th:src="@{${'/'+product.getName()+'.png'}}">
+                <span th:text="'Ціна :'  +${product.price} +' грн'"></span>
+                <a class="add" th:href="@{/cart/add/{id}(id=${product.id})}">Додати до кошику</a>
             </div>
         </div>
     </div>
