--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,36 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<li sec:authorize="isAuthenticated()"><a href="/logout">Logout</a></li>
+<div class="logout"><li sec:authorize="isAuthenticated()"><a href="/logout">Logout</a></li></div>
 <h1>Реєстрація</h1>
 <form th:action="@{/register}" method="post">
     <div>
         <div>
-            <div>
-                <label for="username">first Name</label>
+            <div class="reg">
+                <label for="username">Ім'я</label>
                 <input id="username" th:field="${user.username}" />
                 <span class="error" th:if="${#fields.hasErrors('user.username')}" th:errors="${user.username}"></span>
             </div>
-            <div>
-                <label for="password">first Name</label>
+            <div class="reg">
+                <label for="password">Пароль</label>
                 <input id="password" th:field="${user.password}" />
                 <span class="error" th:if="${#fields.hasErrors('user.password')}" th:errors="${user.password}"></span>
             </div>
-            <div>
-                <label for="phoneNumber">first Name</label>
+            <div class="reg">
+                <label for="phoneNumber">Номер телефону</label>
                 <input id="phoneNumber" th:field="${user.phoneNumber}" />
                 <span class="error" th:if="${#fields.hasErrors('user.phoneNumber')}" th:errors="${user.phoneNumber}"></span>
             </div>
-            <div>
-                <label for="email">first Name</label>
+            <div class="reg">
+                <label for="email">Електронна скринька</label>
                 <input id="email" th:field="${user.email}" />
                 <span class="error" th:if="${#fields.hasErrors('user.email')}" th:errors="${user.email}"></span>
             </div>
         </div>
     </div>
-    <button type="submit">Додати курс</button>
+    <button type="submit">Заєреструватись</button>
 </form>
 </body>
 </html>
