--- a/src/main/resources/templates/home/about.html
+++ b/src/main/resources/templates/home/about.html
@@ -35,6 +35,8 @@
     <footer>
       <h3>© 2023 Магазин «abc»</h3>
       <h3>Телефон +380123456789</h3>
+      <h3 sec:authorize="!isAuthenticated()" ><a href="/register">Register</a></h3>
+      <h3><a href="/login">Login</a></h3>
     </footer>
   </div>
 
