--- a/src/main/resources/templates/AdminPanel/addProduct.html
+++ b/src/main/resources/templates/AdminPanel/addProduct.html
@@ -13,7 +13,7 @@
     <nav>
         <ul class="top-menu">
             <li><a href ="/adminPanel">Продукти</a></li>
-            <li class ="active">Замовлення</li>
+            <li><a href ="/adminPanel/order">Замовлення</a></li>
         </ul>
     </nav>
     <div id="heading">
