--- a/src/main/resources/templates/Shop/catalogMeat.html
+++ b/src/main/resources/templates/Shop/catalogMeat.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Whitesquare</title>
+    <title>Каталог м'яса</title>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet">
     <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -34,6 +34,8 @@
     <footer>
         <h3>© 2023 Магазин «abc»</h3>
         <h3>Телефон +380123456789</h3>
+        <h3 sec:authorize="!isAuthenticated()" ><a href="/register">Register</a></h3>
+        <h3><a href="/login">Login</a></h3>
     </footer>
 </div>
 </body>
