--- a/src/main/resources/templates/Shop/order.html
+++ b/src/main/resources/templates/Shop/order.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Whitesquare</title>
+    <title>Кошик</title>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet">
     <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
