--- a/src/main/resources/templates/AdminPanel/orderView.html
+++ b/src/main/resources/templates/AdminPanel/orderView.html
@@ -12,7 +12,7 @@
 <div id="wrapper">
     <nav>
         <ul class="top-menu">
-            <li class ="active">Продукти</li>
+            <li><a href ="/adminPanel">Продукти</li>
             <li><a href ="/adminPanel/order">Замовлення</a></li>
         </ul>
     </nav>
