--- a/src/main/resources/templates/AdminPanel/showProductAction.html
+++ b/src/main/resources/templates/AdminPanel/showProductAction.html
@@ -42,7 +42,7 @@
             </tbody>
         </table>
         <div id="addProduct"><a class="buy" th:href="@{/adminPanel/addProduct}" >Додати продукт</a></div>
-        <div id="addCategory"><a class="buy" th:href="@{/adminPanel/addProductType}" >Додати категорію</a></div>
+        <!---<div id="addCategory"><a class="buy" th:href="@{/adminPanel/addProductType}" >Додати категорію</a></div>--->
     </div>
     <footer>
         <h3>© 2023 Магазин «abc»</h3>
